update readme and index.html

--- a/index.html
+++ b/index.html
@@ -18,18 +18,22 @@
 		
 		<div class="vanilla-slide">
 			<img src="images/tiger1.jpg" alt="tiger">
+			<!-- content here -->
 		</div>
 
 		<div class="vanilla-slide" >
 			<img src="images/tiger2.jpg" alt="tiger">
+			<!-- content here -->
 		</div>
 		
 		<div class="vanilla-slide" >
 			<img src="images/tiger3.jpg" alt="tiger">
+			<!-- content here -->
 		</div>
 		
 		<div class="vanilla-slide" >
 			<img src="images/tiger4.jpg" alt="tiger">
+			<!-- content here -->
 		</div>
 
 	</div>
